--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,18 +1,20 @@
 .sidebar {
-    width: 12.4%;
-    padding: 45px 0 0 20px;
+    padding-left: 20px;
     box-sizing: content-box;
     box-shadow:
         0 2px 1px -1px rgba(0, 0, 0, 0.2),
         0 1px 1px 0 rgba(0, 0, 0, 0.14),
         0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
+.sidebar__item:first-child {
+    margin-top: 44px;
+}
+
 .sidebar__item {
     justify-content: space-between;
     width: 100%;
 }
 .sidebar__item_text {
-    font-size: 17px;
     font-weight: 500;
     line-height: 150%;
 }
@@ -21,11 +23,8 @@
 }
 
 .sidebar__footer {
-    padding-top: 224px;
-    padding-left: 7px;
-    font-size: 12.7px;
+    padding-left: 6.8px;
 }
-
 .sidebar__version {
     font-weight: 500;
     color: rgba(0, 0, 0, 0.24);
@@ -35,10 +34,8 @@
     color: rgba(0, 0, 0, 0.64);
 }
 .sidebar__logout {
-    padding: 2px 0 30px;
     font-weight: 600;
     font-size: 12.3px;
     border: 0;
-    background-color: white;
     gap: 5px;
 }
