--- a/src/components/Aside/style.css
+++ b/src/components/Aside/style.css
@@ -1,20 +1,10 @@
 .aside {
     height: 100%;
-    min-height: 0;
-
+    padding-right: 8px;
     display: flex;
     flex-direction: column;
 }
-.aside__profile-notification {
-    line-height: 24px;
-    letter-spacing: 0%;
-    padding-top: 15px;
-    color: #2db100;
-    font-weight: 600;
-}
-.aside__notification-item {
-    padding: 9px;
-}
+
 .aside__shares {
     display: flex;
 }
