--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 80px;
     background: #ffffd3;
+    position: fixed;
 }
 .header__current-route {
     padding-left: 14px;
