--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,41 +1,10 @@
 .sidebar {
-    padding-left: 20px;
-    box-sizing: content-box;
-    box-shadow:
-        0 2px 1px -1px rgba(0, 0, 0, 0.2),
-        0 1px 1px 0 rgba(0, 0, 0, 0.14),
-        0 1px 3px 0 rgba(0, 0, 0, 0.12);
-}
-.sidebar__item:first-child {
-    margin-top: 44px;
+    height: 100%;
+    padding-right: 8px;
+    display: flex;
+    flex-direction: column;
 }
 
-.sidebar__item {
-    justify-content: space-between;
-    width: 100%;
-}
-.sidebar__item_text {
-    font-weight: 500;
-    line-height: 150%;
-}
-.sidebar__item_vector {
-    padding-right: 23px;
-}
-
-.sidebar__footer {
-    padding-left: 6.8px;
-}
-.sidebar__version {
-    font-weight: 500;
-    color: rgba(0, 0, 0, 0.24);
-}
-.sidebar__copyright {
-    line-height: 133%;
-    color: rgba(0, 0, 0, 0.64);
-}
-.sidebar__logout {
-    font-weight: 600;
-    font-size: 12.3px;
-    border: 0;
-    gap: 5px;
+.sidebar__shares {
+    display: flex;
 }
