feat(vegan): add base layout to veganСuisine

--- a/src/components/slider/style.css
+++ b/src/components/slider/style.css
@@ -6,6 +6,9 @@
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.08);
 }
+.slider__item-content {
+    padding: 7px 24px 0 22px;
+}
 .slider__right-arrow,
 .slider__left-arrow {
     position: absolute;
