--- a/src/components/sections/Juiciest/style.css
+++ b/src/components/sections/Juiciest/style.css
@@ -17,3 +17,7 @@
 .juiciest__item__image-container {
     position: relative;
 }
+.juiciest__item-content {
+    width: 50%;
+    padding: 7px 24px 0 15.5px;
+}
