--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -3,17 +3,42 @@
     height: 80px;
     background: #ffffd3;
     position: fixed;
+    @media (max-width: 768px) {
+        height: 64px;
+    }
 }
-.header__current-route {
+
+/* .header__current-route {
     padding-left: 14px;
-}
+} */
+
 .header__img {
-    width: 15%;
-    height: 32px;
-    padding-left: 20px;
+    width: 13%;
+    padding-left: 16px;
+    @media (max-width: 1440px) {
+        width: 20%;
+        padding-left: 18px;
+    }
+    @media (max-width: 768px) {
+        width: 30%;
+        padding-left: 20px;
+    }
+    @media (max-width: 360px) {
+        width: 20%;
+        padding-left: 16px;
+    }
 }
 
 .header__container {
-    width: 100%;
-    padding: 0 8px;
+    width: 87%;
+    padding: 0 82px 0 24px;
+    @media (max-width: 1440px) {
+        padding: 0 84px 0 8px;
+    }
+    @media (max-width: 768px) {
+        padding-right: 20px;
+    }
+    @media (max-width: 360px) {
+        padding-right: 16px;
+    }
 }
