--- a/src/components/sections/Juiciest/style.css
+++ b/src/components/sections/Juiciest/style.css
@@ -8,6 +8,9 @@
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 0;
     grid-row-gap: 0;
+    @media (max-width: 1440px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 .juiciest__item {
     overflow: hidden;
