--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -1,13 +1,14 @@
 .main {
-    width: 75%;
     height: 100%;
+    padding-left: 14px;
     @media (max-width: 768px) {
         width: 100%;
     }
 }
 .title {
-    padding: 16px 56px 0 0;
+    padding-top: 16px;
+    padding-bottom: 20px;
     @media (max-width: 768px) {
-        padding: 0 0 8px;
+        padding: 0 0 10px;
     }
 }
