--- a/src/components/sections/culinaryBlogs/style.css
+++ b/src/components/sections/culinaryBlogs/style.css
@@ -1,7 +1,7 @@
 .culinary-blogs {
     background: #c4ff61;
     border-radius: 16px;
-    margin: 34px 0 30px 10px;
+    margin: 34px 0 30px;
     width: 94.3%;
 }
 .culinary-blogs__title {
