--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -2,7 +2,11 @@
     height: 100%;
     padding-left: 14px;
     @media (max-width: 768px) {
-        width: 100%;
+        width: 97%;
+        padding-left: 20px;
+    }
+    @media (max-width: 360px) {
+        padding-left: 16px;
     }
 }
 .title {
