--- a/src/components/slider/style.css
+++ b/src/components/slider/style.css
@@ -4,40 +4,67 @@
     @media (max-width: 1440px) {
         padding-top: 38px;
     }
+    @media (max-width: 768px) {
+        padding-top: 20px;
+    }
 }
 .slider__title {
     @media (max-width: 1440px) {
-        padding-bottom: 10px;
+        padding-bottom: 0;
     }
 }
-.slider__item-title {
-    padding-bottom: 5px;
+
+.slider__list {
+    position: relative;
 }
+
 .slider__item {
     border-radius: 8px;
+    position: relative;
     border: 1px solid rgba(0, 0, 0, 0.08);
+    overflow: hidden;
     min-width: 322px;
+    max-width: 322px;
     @media (max-width: 1440px) {
+        max-width: 277px;
         min-width: 277px;
+    }
+    @media (max-width: 768px) {
+        max-width: 158px;
+        min-width: 158px;
     }
 }
 .slider__content-description {
     margin-bottom: 30px;
 }
-.slider__controls {
-    padding-bottom: 20px;
-}
+
 .slider__item-content {
     padding: 10px 26px 0 22px;
+    @media (max-width: 1440px) {
+        padding: 2px 14px 0 9px;
+    }
 }
-.slider__list {
-    position: relative;
+.slider__item-title {
+    margin-bottom: 5px;
+    @media (max-width: 1440px) {
+        margin-bottom: 12px;
+    }
+}
+.slider__controls {
+    width: 100%;
+    height: 24px;
+    padding-bottom: 20px;
+    @media (max-width: 1440px) {
+        padding-bottom: 10px;
+        padding-left: 2px;
+    }
 }
 
 .slider__right-arrow,
 .slider__left-arrow {
+    z-index: 1;
     position: absolute;
-    transform: translate(-9px, -38px);
+    transform: translate(0, -39px);
     @media (max-width: 1440px) {
         width: 40px;
         height: 40px;
