--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -1,6 +1,10 @@
 .main {
     height: 100%;
     padding-left: 14px;
+    width: 72%;
+    @media (max-width: 1440px) {
+        width: 62%;
+    }
     @media (max-width: 768px) {
         width: 97%;
         padding-left: 20px;
