--- a/src/components/sections/Juiciest/style.css
+++ b/src/components/sections/Juiciest/style.css
@@ -2,13 +2,19 @@
     padding-top: 19px;
     width: 100%;
 }
+
 .juiciest__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 0;
-    grid-row-gap: 0;
     @media (max-width: 1440px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    @media (max-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+    @media (max-width: 768px) {
         grid-template-columns: repeat(1, 1fr);
     }
 }
@@ -16,11 +22,32 @@
     overflow: hidden;
     border-radius: 8px;
     border: 1px solid rgba(0, 0, 0, 0.08);
+    @media (max-width: 360px) {
+        margin-right: 5px;
+    }
 }
 .juiciest__item__image-container {
     position: relative;
+    width: 55%;
+    height: 100%;
+    @media (max-width: 1440px) {
+        width: auto;
+    }
+    @media (max-width: 768px) {
+        min-width: 158px;
+        height: 128px;
+    }
 }
 .juiciest__item-content {
     width: 50%;
     padding: 7px 24px 0 15.5px;
+    @media (max-width: 1440px) {
+        width: 60%;
+        padding-top: 5px;
+    }
+    @media (max-width: 768px) {
+        width: 100%;
+        height: 100%;
+        padding: 13px 5px 3px 2px;
+    }
 }
