--- a/src/components/slider/style.css
+++ b/src/components/slider/style.css
@@ -10,6 +10,9 @@
 }
 .slider__title {
     @media (max-width: 1440px) {
+        padding-bottom: 8px;
+    }
+    @media (max-width: 768px) {
         padding-bottom: 0;
     }
 }
@@ -49,14 +52,20 @@
     @media (max-width: 1440px) {
         margin-bottom: 12px;
     }
+    @media (max-width: 768px) {
+        margin-bottom: 7px;
+    }
 }
 .slider__controls {
     width: 100%;
     height: 24px;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
     @media (max-width: 1440px) {
-        padding-bottom: 10px;
-        padding-left: 2px;
+        margin-bottom: 10px;
+        margin-left: 2px;
+    }
+    @media (max-width: 768px) {
+        margin-bottom: 5px;
     }
 }
 
@@ -64,7 +73,7 @@
 .slider__left-arrow {
     z-index: 1;
     position: absolute;
-    transform: translate(0, -39px);
+    transform: translate(0, -36px);
     @media (max-width: 1440px) {
         width: 40px;
         height: 40px;
