--- a/src/components/sections/Juiciest/style.css
+++ b/src/components/sections/Juiciest/style.css
@@ -14,7 +14,7 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
     }
-    @media (max-width: 768px) {
+    @media (max-width: 360px) {
         grid-template-columns: repeat(1, 1fr);
     }
 }
@@ -40,10 +40,10 @@
 }
 .juiciest__item-content {
     width: 50%;
-    padding: 7px 24px 0 15.5px;
+    padding: 0 24px 0 15.5px;
     @media (max-width: 1440px) {
         width: 60%;
-        padding-top: 5px;
+        padding-top: 10px;
     }
     @media (max-width: 768px) {
         width: 100%;
