feat(vegancuisine): add addaptive to vegan cuisine

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,6 +1,7 @@
 .app {
     height: 100vh;
     padding-top: 80px;
+    width: 100%;
     @media (max-width: 768px) {
         padding-top: 76px;
     }
