--- a/src/components/sections/culinaryBlogs/style.css
+++ b/src/components/sections/culinaryBlogs/style.css
@@ -1,11 +1,11 @@
 .culinary-blogs {
     background: #c4ff61;
     border-radius: 16px;
-    margin: 34px 0 30px;
+    margin: 30px 0 0;
     width: 100%;
-    padding: 0 24px 22.5px;
+    padding: 8px 20px 22.5px;
     @media (max-width: 1440px) {
-        padding: 0 25px 22.5px 21px;
+        padding: 0 25px 28px 24px;
     }
     @media (max-width: 768px) {
         margin-top: 24px;
