--- a/src/components/sections/vegancuisine/style.css
+++ b/src/components/sections/vegancuisine/style.css
@@ -1,24 +1,51 @@
 .vegan-cuisine {
-    width: 94.7%;
-    padding-top: 13px;
     border-top: 1px solid rgba(0, 0, 0, 0.08);
+    padding-top: 4px;
+    margin-top: 48px;
+    @media (max-width: 1440px) {
+        margin-top: 32px;
+        padding-top: 16px;
+    }
+    @media (max-width: 768px) {
+        margin-top: 24px;
+        padding-top: 0;
+    }
 }
-.vegan-cuisine__card-item {
-    width: 47.5%;
-    padding: 24px 23px;
-    gap: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.08);
-    border-radius: 8px;
+.vegan-cuisine__title-container {
+    padding-right: 10px;
+    @media (max-width: 768px) {
+        margin-bottom: 12px;
+    }
 }
 
+.vegan-cuisine__lists {
+    margin-top: 12px;
+    @media (max-width: 1440px) {
+        margin-top: 6px;
+    }
+}
+.vegan-cuisine__card-item {
+    padding: 24px 23px;
+    gap: 5px;
+    border: 1px solid #00000014;
+    border-radius: 8px;
+    @media (max-width: 1440px) {
+        padding: 12px 16px 0;
+    }
+    @media (max-width: 360px) {
+        padding: 11px 12px 12px;
+    }
+}
 .vegan-cuisine__recipe {
     padding-left: 6px;
 }
 .vegan-cuisine__recipe-item {
-    width: 100%;
-    padding: 10px 28px 14px 14px;
+    padding: 12px 22px 12px 16px;
     border: 1px solid rgba(0, 0, 0, 0.08);
     border-radius: 8px;
+    @media (max-width: 1440px) {
+        padding: 8px 5px;
+    }
 }
 .vegan-cuisine__recipe-title {
     margin-top: 13px;
