feat(footer): add footer to the project

--- a/src/components/sections/vegancuisine/style.css
+++ b/src/components/sections/vegancuisine/style.css
@@ -9,6 +9,7 @@
     @media (max-width: 768px) {
         margin-top: 24px;
         padding-top: 0;
+        margin-bottom: 84px;
     }
 }
 .vegan-cuisine__title-container {
@@ -22,6 +23,9 @@
     margin-top: 12px;
     @media (max-width: 1440px) {
         margin-top: 6px;
+    }
+    @media (max-width: 768px) {
+        margin-bottom: 100px;
     }
 }
 .vegan-cuisine__card-item {
