--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     height: 80px;
-    background: #ffffd3;
+    transition: all ease 0.5s;
     position: fixed;
     z-index: 10;
     @media (max-width: 768px) {
