--- a/src/components/slider/style.css
+++ b/src/components/slider/style.css
@@ -18,7 +18,7 @@
 }
 
 .slider__list {
-    position: relative;
+    width: 100%;
 }
 
 .slider__item {
@@ -69,19 +69,11 @@
     }
 }
 
-.slider__right-arrow,
-.slider__left-arrow {
-    z-index: 1;
-    position: absolute;
-    transform: translate(0, -36px);
-    @media (max-width: 1440px) {
-        width: 40px;
-        height: 40px;
-    }
+.swiper-button-next {
+    right: 10px;
 }
-.slider__left-arrow {
-    left: 0;
-}
-.slider__right-arrow {
-    right: 0;
+
+.swiper-button-disabled {
+    opacity: 0.5 !important;
+    cursor: not-allowed;
 }
