--- a/src/components/Header/burger/style.css
+++ b/src/components/Header/burger/style.css
@@ -3,6 +3,10 @@
     height: 48px;
     cursor: pointer;
     transition: all 0.3s ease;
+    display: none;
+    @media (max-width: 768px) {
+        display: block;
+    }
 }
 
 .burger__first-line,
