--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -39,3 +39,18 @@
         padding-right: 16px;
     }
 }
+.header__container-desktop {
+    display: flex;
+    justify-content: space-between;
+    @media (max-width: 768px) {
+        display: none;
+    }
+}
+.header__container-tablet {
+    display: none;
+    @media (max-width: 768px) {
+        align-items: center;
+        display: flex;
+        justify-content: flex-end;
+    }
+}
